Simplify Vercel deployment: - Remove custom builds configuration - Use build script for explicit control - Simplify package.json - Add vercel-build.sh script - Update routes for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    },
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+  "buildCommand": "./vercel-build.sh",
+  "outputDirectory": "client/build",
+  "installCommand": "echo 'No root dependencies to install'",
+  "framework": "create-react-app",
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
@@ -20,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/$1"
+      "dest": "/index.html"
     }
   ],
   "env": {
