--- a/vercel.json
+++ b/vercel.json
@@ -4,19 +4,14 @@
   "outputDirectory": "client/build",
   "installCommand": "echo 'No root dependencies to install'",
   "framework": "create-react-app",
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "env": {
